--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./src/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Kanit&family=Raleway:wght@500&display=swap');
@@ -14,7 +15,7 @@
 </script>
     <title> THE BALLOON</title>
 </head>
-<body background="./src/background_img.png">
+<body>
     <header>
         <!--INICIO LOGO-->
         <div class="logo">
