Add dados da api

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!--FIM PESQUISA-->
         <!--ICONE PERFIL-->
         <div class="perfil">
-            <p>SEJA BEM-VINDX, @</p>
+            <p>SEJA BEM-VINDO, Pigmeu</p>
             <img src="src/Pigmeu.jpg" alt="">
         </div>
         <!--FIM PERFIL-->
