--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!--ICONE PERFIL-->
         <div class="perfil">
             <p>SEJA BEM-VINDO, PIGMEU</p>
-            <img src="src/hipopotamo-pigmeu.jpg" alt="">
+            <img class="fotoHeader" src="src/hipopotamo-pigmeu.jpg" alt="">
             <img id="menu" src="src/menuMobile.png" alt="">
         </div>
         <!--FIM PERFIL-->
@@ -59,7 +59,7 @@
                 </section>
                 <img class="fotoPost" src="src/Mae&filho.png" alt="">
                 <section class="botoes">
-                <button class="botao"><img src="src/like.png" alt=""></button>
+                <button id="like" class="botao"><img src="src/like.png" alt=""></button>
                 <button class="botao"><img src="src/coment.png" alt=""></button>
                 <button class="botao"><img src="src/send.png" alt=""></button>
                 </section>
