--- a/Animações/anima.html
+++ b/Animações/anima.html
@@ -14,7 +14,7 @@
             align-items: center;
             justify-content: center;
         }
-        .baloes{01000000000000000000000000000000000000000
+        .baloes{
             display: flex;
             animation-name: likeBalao;
             animation-duration: 3s;
