--- a/Perfil/index.html
+++ b/Perfil/index.html
@@ -4,24 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../src/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="style.css">
     <title>Olá, seja bem-vindo ao THE BALLOON</title>
 </head>
 <body>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Kanit&family=Kumbh+Sans&display=swap');
+    </style>
     <header>
-        <div>
-            <button>
-                <!-- ao clicar nele apaga os dados do localstorage -->
-            </button>
-            <img src="" alt="Foto de perfil">
-            <p class="user"></p>
-            <h1 class="nome"></h1>
-            <p class="idade"></p>
-            <p class="cidade"></p>
-            <h2 class="descricao"></h2>
+        <div class="userConteudo">
+            <!-- <button class="voltar">
+                ao clicar nele apaga os dados do localstorage -->
+            <!-- </button> --> 
+            <img class="fotoPerfil" src="../src/Pigmeu.jpg" alt="Foto de perfil">
+            <p class="username"><b>@BabyHipo</b></p>
+            <h1 class="nome">Pigmeu</h1>
+            <p class="idade"><b>3 anos</b></p>
+            <p class="cidade">Recife/PE</p>
+            <h2 class="descricao">Amo a natureza!</h2>
         </div>
-        <button class="editarPerfil"></button>
-        <div class="informacoes"></div>
-        <img src="" alt="engrenagem">
+        <button class="editarPerfil">Editar perfil</button>
+        <div class="informacoes">
+            <div>
+                <p>1 publicações</p>
+                <p>0 eventos</p>
+            </div>
+            <div>
+                <p>0 seguidores</p>
+                <p>0 seguindo</p>
+            </div>
+        </div>
+        <img class="engrenagem" src="../src/configuracoes.png" alt="Configurações">
     </header>
+    
 </body>
 </html>
