--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </section>
                 <img class="fotoPost" src="src/Mae&filho.png" alt="">
                 <section class="botoes">
-                <button id="like" class="botao"><img src="src/like.png" alt=""></button>
+                <button class="like botao"><img src="src/like.png" alt=""></button>
                 <button class="botao"><img src="src/coment.png" alt=""></button>
                 <button class="botao"><img src="src/send.png" alt=""></button>
                 </section>
@@ -79,6 +79,5 @@
             </div>
     </section>
     <script src="app.js"></script>
-     
 </body>
 </html>
