Corrige bug dos links

--- a/Perfil/index.html
+++ b/Perfil/index.html
@@ -14,7 +14,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Kanit&family=Kumbh+Sans&display=swap');
     </style>
     <header>
-        <a class="voltar" href="../index.html">
+        <a class="voltar">
             <img src="../src/voltar.png" alt="">
         </a>
         <div class="userConteudo">
