--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="./src/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Kanit&family=Raleway:wght@500&display=swap');
    </style>
@@ -67,7 +68,7 @@
                 <p class="nomeUsuario">BabyHipo</p>
                 <p class="textoPost">Me and mommy 💕💕</p>
                 </section>
-                <div class="sesaoComentarios">
+                <div class="sessaoComentarios">
                     <div class="comentario">
                         <h3>CapivaraCapivara</h3>
                         <p>Que foto legal!</p>
