--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
     <input type="checkbox" id="menu">
     <label for="menu">
-        <img src="src/hamburger.png" alt="">
+        <img class="menuIcon" src="src/hamburger.png" alt="">
     </label>
     <nav>
         <ul>
